// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddressBookSelector /> component its snapshot matches story Default 1`] = `
.c3 {
  font-weight: 600;
}

.c4 {
  margin-top: 0.25rem;
}

.c1 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  background-color: #f4f4f4;
  cursor: pointer;
  padding: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0.25rem;
  gap: 1rem;
}

.c0:hover {
  background-color: #e8e8e8;
}

.c2 {
  font-size: 0.875rem;
}

<div>
  <div
    class="SelectionListstyles__SelectionList-sc-mfahhv-0"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="cds--radio-button-wrapper"
        >
          <input
            class="cds--radio-button"
            id=":r0:"
            type="radio"
            value=""
          />
          <label
            class="cds--radio-button__label"
            for=":r0:"
          >
            <span
              class="cds--radio-button__appearance"
            />
            <span />
          </label>
        </div>
      </div>
      <label
        class="c2"
        for=":r0:"
      >
        <div
          class="c3"
        >
           
        </div>
        <div
          class="c4"
        >
          CHQ
          , 
           
        </div>
      </label>
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="cds--radio-button-wrapper"
        >
          <input
            class="cds--radio-button"
            id=":r1:"
            type="radio"
            value=""
          />
          <label
            class="cds--radio-button__label"
            for=":r1:"
          >
            <span
              class="cds--radio-button__appearance"
            />
            <span />
          </label>
        </div>
      </div>
      <label
        class="c2"
        for=":r1:"
      >
        <div
          class="c3"
        >
           
        </div>
        <div
          class="c4"
        >
          Branch Office - New York
          , 
           
        </div>
      </label>
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="cds--radio-button-wrapper"
        >
          <input
            class="cds--radio-button"
            id=":r2:"
            type="radio"
            value=""
          />
          <label
            class="cds--radio-button__label"
            for=":r2:"
          >
            <span
              class="cds--radio-button__appearance"
            />
            <span />
          </label>
        </div>
      </div>
      <label
        class="c2"
        for=":r2:"
      >
        <div
          class="c3"
        >
           
        </div>
        <div
          class="c4"
        >
          Home
          , 
           
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`<AddressBookSelector /> component its snapshot matches story Selected 1`] = `
.c3 {
  font-weight: 600;
}

.c4 {
  margin-top: 0.25rem;
}

.c1 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  background-color: #f4f4f4;
  cursor: pointer;
  padding: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0.25rem;
  gap: 1rem;
}

.c0:hover {
  background-color: #e8e8e8;
}

.c2 {
  font-size: 0.875rem;
}

<div>
  <div
    class="SelectionListstyles__SelectionList-sc-mfahhv-0"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="cds--radio-button-wrapper"
        >
          <input
            class="cds--radio-button"
            id=":r3:"
            type="radio"
            value=""
          />
          <label
            class="cds--radio-button__label"
            for=":r3:"
          >
            <span
              class="cds--radio-button__appearance"
            />
            <span />
          </label>
        </div>
      </div>
      <label
        class="c2"
        for=":r3:"
      >
        <div
          class="c3"
        >
           
        </div>
        <div
          class="c4"
        >
          CHQ
          , 
           
        </div>
      </label>
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="cds--radio-button-wrapper"
        >
          <input
            checked=""
            class="cds--radio-button"
            id=":r4:"
            type="radio"
            value=""
          />
          <label
            class="cds--radio-button__label"
            for=":r4:"
          >
            <span
              class="cds--radio-button__appearance"
            />
            <span />
          </label>
        </div>
      </div>
      <label
        class="c2"
        for=":r4:"
      >
        <div
          class="c3"
        >
           
        </div>
        <div
          class="c4"
        >
          Branch Office - New York
          , 
           
        </div>
      </label>
    </div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="cds--radio-button-wrapper"
        >
          <input
            class="cds--radio-button"
            id=":r5:"
            type="radio"
            value=""
          />
          <label
            class="cds--radio-button__label"
            for=":r5:"
          >
            <span
              class="cds--radio-button__appearance"
            />
            <span />
          </label>
        </div>
      </div>
      <label
        class="c2"
        for=":r5:"
      >
        <div
          class="c3"
        >
           
        </div>
        <div
          class="c4"
        >
          Home
          , 
           
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`<AddressBookSelector /> component its snapshot matches story Skeleton 1`] = `
.c1 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  width: 5.5em;
  border-radius: 5px;
  -webkit-animation: pulse 1.2s ease-in-out infinite;
  animation: pulse 1.2s ease-in-out infinite;
  background: linear-gradient(-90deg,#f0f0f0 0%,#f8f8f8 50%,#f0f0f0 100%);
  background-size: 400% 400%;
  display: inline-block;
  height: 100%;
}

.c3::before {
  content: '\\00a0';
}

.c0 {
  background-color: #f4f4f4;
  cursor: pointer;
  padding: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 0.25rem;
  gap: 1rem;
}

.c0:hover {
  background-color: #e8e8e8;
}

.c2 {
  font-size: 0.875rem;
}

<div>
  <div
    class="SelectionListstyles__SelectionList-sc-mfahhv-0"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="cds--radio-button-wrapper"
        >
          <input
            class="cds--radio-button"
            id=":r6:"
            type="radio"
            value=""
          />
          <label
            class="cds--radio-button__label"
            for=":r6:"
          >
            <span
              class="cds--radio-button__appearance"
            />
            <span />
          </label>
        </div>
      </div>
      <label
        class="c2"
        for=":r6:"
      >
        <label
          class="c2"
        >
          <div
            class="c3"
          />
        </label>
      </label>
    </div>
  </div>
</div>
`;
